--- a/dot_config/mise/config.toml.tmpl
+++ b/dot_config/mise/config.toml.tmpl
@@ -1,16 +1,24 @@
 [settings]
 experimental = true
 legacy_version_file_disable_tools = ['java']
+{{- if not .minimal }}
 idiomatic_version_file_enable_tools = ["node"]
+{{- end }}
 
 [tools]
+{{- if not .minimal }}
 buildpack = "0.27.0-rc1"
+{{- end }}
 direnv = "2.32.2"
 go = "1.23.4"
+{{- if not .minimal }}
 jq = "1.6"
 k6 = "0.54.0"
+{{- end }}
 node = "22"
 python = "3.12"
 ripgrep = "12.1.1"
 rust = "1.87.0"
+{{- if not .minimal }}
 zig = "0.11.0"
+{{- end }}
